Added default reporter to core

--- a/Notebooks/CS Example.ipynb
+++ b/Notebooks/CS Example.ipynb
@@ -8,7 +8,7 @@
     {
      "data": {
       "text/html": [
-       "Installed package TaskBuilder.fs version 2.1.0"
+       "Installed package FSharp.Core version 4.7.0"
       ]
      },
      "metadata": {},
@@ -17,7 +17,7 @@
     {
      "data": {
       "text/html": [
-       "Installed package FSharp.Core version 4.7.0"
+       "Installed package TaskBuilder.fs version 2.1.0"
       ]
      },
      "metadata": {},
@@ -41,34 +41,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 3,
    "metadata": {
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "100%                                              \r"
+      "[||||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] [humidity.csv] 1.94 of 1.94MB @ 2127.81KB/s\n",
+      "[||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] [wind_speed.csv] 1.01 of 1.01MB @ 1293.64KB/s\r"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>Notes</th><th>BytesRead</th><th>TotalBytes</th><th>BytesPerSecond</th></tr></thead><tbody><tr><td>0</td><td>12:50:23.338</td><td>0</td><td>0</td><td>0</td></tr><tr><td>1</td><td>12:50:27.362 humidity.csv</td><td>32766</td><td>2033016</td><td>79.09122314380106</td></tr><tr><td>2</td><td>12:50:27.933 humidity.csv</td><td>237699</td><td>2033016</td><td>350.7593442331751</td></tr><tr><td>3</td><td>12:50:28.387 humidity.csv</td><td>649391</td><td>2033016</td><td>885.1781720558422</td></tr><tr><td>4</td><td>12:50:28.740 humidity.csv</td><td>953831</td><td>2033016</td><td>841.721692918268</td></tr><tr><td>5</td><td>12:50:29.108 humidity.csv</td><td>1251881</td><td>2033016</td><td>791.946606661653</td></tr><tr><td>6</td><td>12:50:29.528 humidity.csv</td><td>1546793</td><td>2033016</td><td>686.7188572998214</td></tr><tr><td>7</td><td>12:50:30.135 humidity.csv</td><td>1808937</td><td>2033016</td><td>421.51484201508464</td></tr><tr><td>8</td><td>12:50:30.203 humidity.csv</td><td>2033016</td><td>2033016</td><td>3223.108476806219</td></tr></tbody></table>"
+       "<table><thead><tr><th><i>index</i></th><th>Notes</th><th>BytesRead</th><th>TotalBytes</th><th>TimeStamp</th><th>BytesPerSecond</th></tr></thead><tbody><tr><td>0</td><td></td><td>0</td><td>0</td><td>2020-02-05 08:50:30Z</td><td>0</td></tr></tbody></table>"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "using System;\n",
+    "using System.IO;\n",
     "using FsKaggleDatasetDownloader.Interop;\n",
     "using Core = FsKaggleDatasetDownloader.Core;\n",
-    "var report = new List<Core.ReportingData>(){new Core.ReportingData(DateTime.Now.ToString(\"hh:mm:ss.fff\"), 0,0,0)};\n",
+    "\n",
+    "var report = new List<Core.ReportingData>(){new Core.ReportingData(\"\", 0,0,DateTime.Now,0)};\n",
+    "\n",
+    "void asciiProgressReport(Core.ReportingData data) {\n",
+    "    report.Add(data);\n",
+    "    var percent = (int)Math.Ceiling(100.0*data.BytesRead/data.TotalBytes);\n",
+    "    var bar = \"[\".PadRight(percent,'|') + \"]\".PadLeft(100-percent, ' ');\n",
+    "    var status = $\"{percent}% @ {Math.Round(data.BytesPerSecond/1024,2)}KB/s\";\n",
+    "    Console.Write($\"{bar} {status}\\r\");\n",
+    "}\n",
     "\n",
     "var options = new DownloadDatasetOptions {\n",
     "    DatasetInfo = new DatasetInfo {\n",
@@ -78,19 +89,26 @@
     "    },\n",
     "    KaggleJsonPath = @\"C:\\Users\\Ares\\.kaggle\\kaggle.json\",\n",
     "    DestinationFolder = \"../Data\",\n",
-    "    ReportingCallback = data => {\n",
-    "            var notes = $\"{DateTime.Now.ToString(\"hh:mm:ss.fff\")} {data.Notes}\";\n",
-    "            report.Add(new Core.ReportingData(notes, data.BytesRead,data.TotalBytes,data.BytesPerSecond/1024));\n",
-    "            \n",
-    "            Console.Write($\"{Math.Round(100.0*(double)data.BytesRead/(double)data.TotalBytes,2)}%\".PadRight(50,' ') + \"\\r\");\n",
-    "        },\n",
+    "    //ReportingCallback = asciiProgressReport,\n",
+    "    ReportingCallback = FsKaggleDatasetDownloader.Reporter.ProgressBar,\n",
     "    Overwrite = true\n",
     "};\n",
     "\n",
     "await Kaggle.DownloadDatasetAsync(options);\n",
     "\n",
+    "options.DatasetInfo.Request = \"wind_speed.csv\";\n",
+    "Console.WriteLine();\n",
+    "await Kaggle.DownloadDatasetAsync(options);\n",
+    "\n",
     "report"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
