corrected download format from csv to zip

--- a/Notebooks/CS Example.ipynb
+++ b/Notebooks/CS Example.ipynb
@@ -50,14 +50,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[||||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] [humidity.csv] 1.94 of 1.94MB @ 2127.81KB/s\n",
-      "[||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] [wind_speed.csv] 1.01 of 1.01MB @ 1293.64KB/s\r"
+      "humidity.zip [|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] 1.94 of 1.94MB @ 4549.88KB/s\n",
+      "wind_speed.zip [||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] 1.01 of 1.01MB @ 10318.03KB/s\r"
      ]
     },
     {
      "data": {
       "text/html": [
-       "<table><thead><tr><th><i>index</i></th><th>Notes</th><th>BytesRead</th><th>TotalBytes</th><th>TimeStamp</th><th>BytesPerSecond</th></tr></thead><tbody><tr><td>0</td><td></td><td>0</td><td>0</td><td>2020-02-05 08:50:30Z</td><td>0</td></tr></tbody></table>"
+       "<table><thead><tr><th><i>index</i></th><th>TimeStamp</th><th>Notes</th><th>BytesRead</th><th>TotalBytes</th><th>BytesPerSecond</th></tr></thead><tbody><tr><td>0</td><td>2020-02-05 21:41:48Z</td><td></td><td>0</td><td>0</td><td>0</td></tr></tbody></table>"
       ]
      },
      "execution_count": 3,
@@ -71,7 +71,7 @@
     "using FsKaggleDatasetDownloader.Interop;\n",
     "using Core = FsKaggleDatasetDownloader.Core;\n",
     "\n",
-    "var report = new List<Core.ReportingData>(){new Core.ReportingData(\"\", 0,0,DateTime.Now,0)};\n",
+    "var report = new List<Core.ReportingData>(){new Core.ReportingData(DateTime.Now,\"\", 0,0,0)};\n",
     "\n",
     "void asciiProgressReport(Core.ReportingData data) {\n",
     "    report.Add(data);\n",
@@ -101,6 +101,33 @@
     "await Kaggle.DownloadDatasetAsync(options);\n",
     "\n",
     "report"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(report[^1].BytesRead - report[^2].BytesRead)/(report[^1].TimeStamp - report[^2].TimeStamp).TotalSeconds/1024"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "(report[5].BytesRead - report[4].BytesRead)/(report[5].TimeStamp - report[4].TimeStamp).TotalSeconds"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "report.Select(r=>r.BytesPerSecond).Average()"
    ]
   },
   {
