simpliied names and added package info

--- a/Notebooks/CS Example.ipynb
+++ b/Notebooks/CS Example.ipynb
@@ -35,7 +35,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#r \"C:\\Users\\Ares\\Source\\Repos\\Ds-Ai\\fs-kaggle\\FsKaggleDatasetDownloader\\bin\\Debug\\netstandard2.1\\FsKaggleDatasetDownloader.dll\"\n",
+    "#r \"C:\\Users\\Ares\\Source\\Repos\\Ds-Ai\\fs-kaggle\\FsKaggle\\bin\\Debug\\netstandard2.1\\FsKaggle.dll\"\n",
     "// https://github.com/dotnet/interactive/issues/49"
    ]
   },
@@ -68,8 +68,8 @@
    "source": [
     "using System;\n",
     "using System.IO;\n",
-    "using FsKaggleDatasetDownloader.Interop;\n",
-    "using Core = FsKaggleDatasetDownloader.Core;\n",
+    "using FsKaggle.Interop;\n",
+    "using Core = FsKaggle.Core;\n",
     "\n",
     "var report = new List<Core.ReportingData>(){new Core.ReportingData(DateTime.Now,\"\", 0,0,0)};\n",
     "\n",
@@ -90,7 +90,7 @@
     "    KaggleJsonPath = @\"C:\\Users\\Ares\\.kaggle\\kaggle.json\",\n",
     "    DestinationFolder = \"../Data\",\n",
     "    //ReportingCallback = asciiProgressReport,\n",
-    "    ReportingCallback = FsKaggleDatasetDownloader.Reporter.ProgressBar,\n",
+    "    ReportingCallback = FsKaggle.Reporter.ProgressBar,\n",
     "    Overwrite = true\n",
     "};\n",
     "\n",
