Some documentation added

--- a/Notebooks/CS Example.ipynb
+++ b/Notebooks/CS Example.ipynb
@@ -71,9 +71,9 @@
     "using FsKaggle.Interop;\n",
     "using Core = FsKaggle.Core;\n",
     "\n",
-    "var report = new List<Core.ReportingData>(){new Core.ReportingData(DateTime.Now,\"\", 0,0,0)};\n",
+    "var report = new List<Core.ProgressData>(){new Core.ProgressData(DateTime.Now,\"\", 0,0,0)};\n",
     "\n",
-    "void asciiProgressReport(Core.ReportingData data) {\n",
+    "void asciiProgressReport(Core.ProgressData data) {\n",
     "    report.Add(data);\n",
     "    var percent = (int)Math.Ceiling(100.0*data.BytesRead/data.TotalBytes);\n",
     "    var bar = \"[\".PadRight(percent,'|') + \"]\".PadLeft(100-percent, ' ');\n",
