--- a/Notebooks/F# Example.ipynb
+++ b/Notebooks/F# Example.ipynb
@@ -33,7 +33,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Minimum code needed to get things going\n",
+    "# Quick start\n",
     "\n",
     "If you're already setup with a kaggle account and the <code>kaggle.json</code> file is under *~/.kaggle*, you can just declare the name of the dataset and the dataset owner and sit back while the requested dataset zip is downloaded to the current directory."
    ]
@@ -103,7 +103,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Explicitly setting all extended options:"
+    "## Partially setting extended options:"
    ]
   },
   {
