--- a/Notebooks/C# Example.ipynb
+++ b/Notebooks/C# Example.ipynb
@@ -45,7 +45,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Minimum code needed to get things going\n",
+    "# Quick start\n",
     "\n",
     "If you're already setup with a kaggle account and the <code>kaggle.json</code> file is under *~/.kaggle*, you can just declare the name of the dataset and the dataset owner and sit back while the requested dataset zip is downloaded to the current directory."
    ]
@@ -200,13 +200,6 @@
     "        fill=\"tozeroy\"\n",
     "    })"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
