--- a/Notebooks/C# Example.ipynb
+++ b/Notebooks/C# Example.ipynb
@@ -2,43 +2,11 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Installed package TaskBuilder.fs version 2.1.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    },
-    {
-     "data": {
-      "text/html": [
-       "Installed package FSharp.Core version 4.7.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#r \"nuget:TaskBuilder.fs,2.1.0\"\n",
-    "#r \"nuget:FSharp.Core,4.7.0.0\"    "
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "/* Can't have local dlls referenced along with packages\n",
-    " * see https://github.com/dotnet/interactive/issues/49 \n",
-    " */\n",
-    "#r \"..\\FsKaggle\\bin\\Debug\\netstandard2.1\\FsKaggle.dll\""
+    "#r \"nuget:AresLazarus.FsKaggle\""
    ]
   },
   {
@@ -59,25 +27,58 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "humidity.zip [||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||| 100.00%] 1.94 of 1.94MB @ 666.05KB/s\r"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "using FsKaggle.Interop;\n",
     "\n",
-    "var options = new DatasetInfo { Owner = \"selfishgene\", Dataset = \"historical-hourly-weather-data\" };\n",
+    "var options = new DatasetInfo { Owner = \"dataset-owner\", Dataset = \"dataset-name\" };\n",
     "\n",
     "// If you are just trying things out, consider using the Request parameter to target \n",
     "// a specific file from the dataset to reduce the waiting.\n",
     "await Kaggle.DownloadDatasetAsync(options);    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Extended options \n",
+    "\n",
+    "You can also call <code>Kaggle.DownloadDatasetAsync</code> using <code>FsKaggle.DownloadDatasetOptions</code>, which allows further customization:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "using System.IO;\n",
+    "\n",
+    "if (!Directory.Exists(\"Data\")) \n",
+    "    Directory.CreateDirectory(\"Data\");\n",
+    "\n",
+    "var advancedOptions = new DownloadDatasetOptions {\n",
+    "    DatasetInfo = options,\n",
+    "    KaggleJsonPath = @\"C:\\Credentials\\kaggle.json\",\n",
+    "    DestinationFolder = \"Data\",\n",
+    "    ReportingCallback = FsKaggle.Reporter.ProgressBar,\n",
+    "    Overwrite = true\n",
+    "};"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "* **DatasetInfo**: The dataset options, see above.\n",
+    "* **Credentials**: Where to look the API key info. Default is <em> \"~/.kaggle/kaggle.json\"</em>. \n",
+    "* **DestinationFolder**: Send incoming files to some other existing directory. Default is current.\n",
+    "* **Overwrite**: Default is false, otherwise any existing file with the same name will be overwritten without confirmation.\n",
+    "* **CancellationToken**: In case you think you might need to manually stop the download.\n",
+    "* **ReportingCallback**: Implement a custom progress reporter by inserting your own handler. Default is <code>FsKaggle.Reporter.ProgressBar</code>"
    ]
   },
   {
@@ -145,37 +146,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The <code>DownloadDatasetOptions</code> type, other than the reporting callback, contains a few additional parameters:\n",
-    "* **KaggleJsonPath**: Where to look the API key info. By default it checks *~/.kaggle/kaggle.json*\n",
-    "* **DestinationFolder**: Send incoming files to some other existing directory.\n",
-    "* **Overwrite**: Default is false, otherwise any existing file with the same name will be overwritten without confirmation.\n",
-    "* **CancellationToken**: In case you think you might need to manually stop the download."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "using System.IO;\n",
-    "\n",
-    "if (!Directory.Exists(\"Data\")) \n",
-    "    Directory.CreateDirectory(\"Data\");\n",
-    "\n",
-    "var advancedOptions = new DownloadDatasetOptions {\n",
-    "    DatasetInfo = options,\n",
-    "    KaggleJsonPath = @\"C:\\Credentials\\kaggle.json\",\n",
-    "    DestinationFolder = \"Data\",\n",
-    "    ReportingCallback = FsKaggle.Reporter.ProgressBar,\n",
-    "    Overwrite = true\n",
-    "};"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
     "# Obligatory jupyter notebook data plot\n",
     "\n",
     "Oh so that's why we logged the progress reports..."
@@ -200,6 +170,13 @@
     "        fill=\"tozeroy\"\n",
     "    })"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
