--- a/Notebooks/F# Example.ipynb
+++ b/Notebooks/F# Example.ipynb
@@ -2,31 +2,12 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#r \"nuget:TaskBuilder.fs,2.1.0\""
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "Installed package TaskBuilder.fs version 2.1.0"
-      ]
-     },
-     "metadata": {},
-     "output_type": "display_data"
-    }
-   ],
-   "source": [
-    "#r @\"..\\FsKaggle\\bin\\Debug\\netstandard2.1\\FsKaggle.dll\"\n",
-    "open FsKaggle"
+    "#r \"nuget:AresLazarus.FsKaggle\"\n",
+    "open FsKaggle // "
    ]
   },
   {
@@ -46,9 +27,9 @@
    "source": [
     "open FsKaggle\n",
     "\n",
-    "{ Owner = \"selfishgene\"\n",
-    "  Dataset = \"historical-hourly-weather-data\"\n",
-    "  Request = Filename \"temperature.csv\" }\n",
+    "{ Owner = \"dataset-owner\"\n",
+    "  Dataset = \"dataset-name\"\n",
+    "  Request = Filename \"dataset-file.csv\" }\n",
     "|> Kaggle.DownloadDatasetAsync  \n",
     "|> Async.RunSynchronously"
    ]
@@ -103,60 +84,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Partially setting extended options:"
+    "## Partially setting extended options:\n",
+    "To set only what you need you can get the default <code>DownloadDatasetOption</code> record from any <code>DatasetInfo</code> instance and use record cloning:"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<table><thead><tr><th>DatasetInfo</th><th>Credentials</th><th>DestinationFolder</th><th>Overwrite</th><th>CancellationToken</th><th>ReportingCallback</th></tr></thead><tbody><tr><td>{ FsKaggle.DatasetInfo: Owner: selfishgene, Dataset: historical-hourly-weather-data, Request: { FsKaggle.DatasetFile+Filename: Item: temperature.csv, Tag: 0, IsFilename: True, IsAll: False } }</td><td>{ FsKaggle.CredentialsSource+Path: Item: kaggle.json, Tag: 0, IsPath: True, IsSource: False, IsCreds: False, IsClient: False }</td><td>./Data</td><td>True</td><td>&lt;null&gt;</td><td>{ Microsoft.FSharp.Core.FSharpOption&lt;Microsoft.FSharp.Core.FSharpFunc&lt;FsKaggle.ProgressData,Microsoft.FSharp.Core.Unit&gt;&gt;: Value: { FSI_0039+it@9-6:  } }</td></tr></tbody></table>"
-      ]
-     },
-     "execution_count": 35,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "{ DatasetInfo = \n",
-    "    { Owner = \"selfishgene\"\n",
-    "      Dataset = \"historical-hourly-weather-data\"\n",
-    "      Request = Filename \"temperature.csv\" }\n",
-    "  Credentials = CredentialsSource.Path \"kaggle.json\"\n",
-    "  DestinationFolder = \"./Data\"\n",
-    "  Overwrite = true\n",
-    "  CancellationToken = None\n",
-    "  ReportingCallback = Some Reporter.ProgressBar }"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## Partially setting extended options:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "let datasetOptions = \n",
-    "    { Owner = \"selfishgene\"\n",
-    "      Dataset = \"historical-hourly-weather-data\"\n",
-    "      Request = Filename \"temperature.csv\" }\n",
+    "    { Owner = \"owner\"\n",
+    "      Dataset = \"dataset\"\n",
+    "      Request = DatasetFile.All }\n",
     "\n",
-    "let extended = { datasetOptions.Extended() with Overwrite = true }\n",
-    "\n",
-    "(* or *)\n",
-    "\n",
-    "let extended' = { DownloadDatasetOptions.Default datasetOptions with DestinationFolder = \"./Data\" }"
+    "{ datasetOptions.Extended() with Overwrite = true }"
    ]
   },
   {
@@ -178,7 +121,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -199,27 +142,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[|||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||||] 100% @ 1263.90KB/s 00:00\r"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<null>"
-      ]
-     },
-     "execution_count": 19,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "open System.IO\n",
     "\n",
@@ -246,46 +171,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": null,
    "metadata": {
     "scrolled": false
    },
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div id=\"d1e136ae-29c3-475e-bdf4-29d954e61462\" style=\"width: 900px; height: 500px;\"></div>\r\n",
-       "<script type=\"text/javascript\">\r\n",
-       "\r\n",
-       "var renderPlotly = function() {\r\n",
-       "    var xplotRequire = requirejs.config({context:'xplot-3.0.1',paths:{plotly:'https://cdn.plot.ly/plotly-1.49.2.min'}});\r\n",
-       "    xplotRequire(['plotly'], function(Plotly) {\r\n",
-       "\n",
-       "            var data = [{\"type\":\"scatter\",\"showlegend\":true,\"x\":[\"2020-02-10T23:11:22.5321496+02:00\",\"2020-02-10T23:11:22.9361532+02:00\",\"2020-02-10T23:11:23.3203968+02:00\",\"2020-02-10T23:11:23.6869903+02:00\",\"2020-02-10T23:11:24.0473394+02:00\",\"2020-02-10T23:11:24.4254576+02:00\",\"2020-02-10T23:11:24.7996659+02:00\",\"2020-02-10T23:11:25.1656812+02:00\",\"2020-02-10T23:11:25.5342387+02:00\",\"2020-02-10T23:11:25.9081845+02:00\",\"2020-02-10T23:11:26.3313064+02:00\",\"2020-02-10T23:11:26.712448+02:00\",\"2020-02-10T23:11:26.9785537+02:00\"],\"y\":[406091.3282734239,672916.1023527277,746687.1011708585,789137.3418008445,935585.8089590635,1041020.9638582924,1095771.6749977595,1120334.1746780407,801052.598412193,789463.7513287695,1046374.2425715419,1118949.891751979,1294233.2538851874],\"fill\":\"tozeroy\",\"name\":\"Bytes/sec\"}];\n",
-       "            var layout = \"\";\n",
-       "            Plotly.newPlot('d1e136ae-29c3-475e-bdf4-29d954e61462', data, layout);\n",
-       "        \r\n",
-       "});\r\n",
-       "};\r\n",
-       "if ((typeof(requirejs) !==  typeof(Function)) || (typeof(requirejs.config) !== typeof(Function))) { \r\n",
-       "    var script = document.createElement(\"script\"); \r\n",
-       "    script.setAttribute(\"src\", \"https://cdnjs.cloudflare.com/ajax/libs/require.js/2.3.6/require.min.js\"); \r\n",
-       "    script.onload = function(){\r\n",
-       "        renderPlotly();\r\n",
-       "    };\r\n",
-       "    document.getElementsByTagName(\"head\")[0].appendChild(script); \r\n",
-       "}\r\n",
-       "else {\r\n",
-       "    renderPlotly();\r\n",
-       "}\r\n",
-       "</script>\r\n"
-      ]
-     },
-     "execution_count": 32,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "open XPlot.Plotly\n",
     "\n",
